# internal/models/req/users.go
@@ -17,10 +17,16 @@ func (list UsersGetList) Scope(db *gorm.DB) *gorm.DB {
 	return db
 }
 
-type UsersCreate struct{}
+type UsersCreate struct {
+	Username    string `json:"username" binding:"required,alphanum,min=6"`
+	Nickname    string `json:"nickname"`
+	Email       string `json:"email" binding:"required,email"`
+	Password    string `json:"password" binding:"required,alphanum,min=6"`
+	PhoneNumber string `json:"phone_number" binding:"required,numeric,len=10"`
+}
 
 type UsersUpdate struct{}
 
-type UsersDelete  struct {
+type UsersDelete struct {
 	ID string `json:"id"`
 }
